@@ -1,3 +1,10 @@
+2008-11-06  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* win/tcl.m4:       add "-Wno-implicit-int" flag for gcc, as on UNIX
+	* win/configure     (regenerated)
+	* generic/tclIO.c   eliminate an 'array index out of bounds'
+	                    warning on HP-UX
+
 2008-11-04  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclPort.h: remove the ../win/ header dir as the build
@@ -30,7 +37,7 @@
 	* generic/tclCompile.h:      CONSTify TclDTraceInfo
 	* generic/tclBasic.c
 	* generic/tclProc.c
-	* generic/tclEnv.c:          Eliminate some -Wstrings-write warnings
+	* generic/tclEnv.c:          Eliminate some -Wwrite-strings warnings
 	* generic/tclLink.c
 
 2008-10-27  Don Porter  <dgp@users.sourceforge.net>
